src/objects/Apttus_Config2__PriceMatrixEntry__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__Condition__c</fullName>
        <description>The condition specification</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Condition</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension1Value__c</fullName>
        <description>The value for the first dimension</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Dimension 1 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension2Value__c</fullName>
        <description>The value for the second dimension</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Dimension 2 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension3Value__c</fullName>
        <description>The value for the third dimension</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Dimension 3 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EntryKey__c</fullName>
        <description>The entry key used in keyed matrix pricing. Only applicable to dimension matrix.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>The entry key used in keyed matrix pricing. Only applicable to dimension matrix.</inlineHelpText>
        <label>Entry Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PeriodEndDate__c</fullName>
        <description>The period end date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The period end date</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PeriodStartDate__c</fullName>
        <description>The period start date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The period start date</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
</CustomObject>